--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ mod_license=GNU LGPL 3.0
 mod_version=1.0
 mod_group_id=com.juiceybeans
 mod_authors=JuiceyBeans
-mod_description=Ever though throwing eggs to hatch chickens was stupid?
+mod_description=Ever thought throwing eggs to hatch chickens was stupid?
 
 emi_version=1.1.22
 jade_version=11.13.1
